completed pdf quests

--- a/style.css
+++ b/style.css
@@ -73,3 +73,13 @@ button {
     margin: 1%;
     border-radius: 7px;
 }
+
+/* my additions */
+.stats-containers {
+    display: flex;
+    align-items: center;
+}
+.stats-containers:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
